--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 html {
   font-family: Poppins, sans-serif;
+  font-size: 13px;
 }
 
 body {
@@ -49,7 +50,7 @@ button {
   cursor: pointer;
   border: 0;
   transition: 0.3s ease-in-out all;
-  font-size: 16px;
+  font-size: 1.2rem;
 }
 
 button:hover {
